# socket-io-utils

./: Cargo.toml
.github/: test.yml
src/: handshake_model.rs  lib.rs  payload_deserializer.rs  payload_serializer.rs  socket_id_data_serializer.rs  socket_io_contract.rs  socket_io_data.rs  socket_io_message.rs  socket_io_protocol.rs  socket_io_settings.rs
src/my_socket_io_messages/: mod.rs  my_socket_io_message.rs  my_socket_io_text_payload.rs  payload_compilers.rs  payloads.rs
