[package]
name = "socket-io-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-extensions = { branch = "0.1.1", git = "https://github.com/MyJetTools/rust-extensions.git" }
my-json = { branch = "0.1.1", git = "https://github.com/MyJetTools/my-json.git" }
