[package]
name = "socket-io-utils"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git" }
my-json = { tag = "0.3.1", git = "https://github.com/MyJetTools/my-json.git" }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
